# Hephaestus

./: CMakeLists.txt  README.md  checks.json
Include/Private/Hephaestus/: DefaultRenderer.hpp  DefaultScene.hpp  GpuMaterial.hpp  GpuMesh.hpp
Include/Private/Hephaestus/Components/: GpuMaterialComponent.hpp  GpuMeshComponent.hpp  TagCreateGpuResourcesComponent.hpp
Include/Public/Hephaestus/: Application.hpp  Renderer.hpp  Scene.hpp
Include/Public/Hephaestus/Components/: MaterialComponent.hpp  MeshComponent.hpp  ParentComponent.hpp  TransformComponent.hpp
Include/Public/Hephaestus/Input/: Mouse.hpp
Include/Public/Hephaestus/RHI/: Buffer.hpp  Extents.hpp  (+4 more)
data/Shaders/: DebugLines.vs.glsl  FST.vs.glsl  Shadow.vs.glsl  Simple.fs.glsl  Simple.vs.glsl
data/Shaders/Default/: GpuConstants.include.glsl  GpuMaterial.include.glsl  GpuModelMeshInstance.include.glsl  Scene.fs.glsl  Scene.vs.glsl
data/shaders/: ObjectBuffer.include.glsl  Simple.Debug.fs.glsl
examples/: CMakeLists.txt
examples/OpenSpace/: CMakeLists.txt  Main.cpp
include/Hephaestus/: Application.hpp  Assets.hpp  Camera.hpp  CpuComponents.hpp  Game.hpp  Hash.hpp  Input.hpp  RHI.hpp  Renderer.hpp  Types.hpp
include/Private/Hephaestus/: DefaultRenderer.hpp  GpuMaterial.hpp  GpuMesh.hpp
include/Public/Hephaestus/: Application.hpp  ApplicationContext.hpp  ApplicationSettings.hpp  Id.hpp  VectorMath.hpp
libs/: CMakeLists.txt
src/: Application.cpp  Assets.cpp  CMakeLists.txt  DefaultRenderer.cpp  DefaultScene.cpp  Game.cpp  Input.cpp  Main.cpp  RHI.cpp  Renderer.cpp  Scene.cpp
src/Assets/: Assets.cpp
src/Input/: Keyboard.cpp  Mouse.cpp
src/Private/Hephaestus/: DefaultRenderer.hpp  DefaultScene.hpp
src/Private/Xacor/: DefaultRenderer.hpp  DefaultScene.hpp
src/Public/Hephaestus/: Application.hpp  ApplicationContext.hpp  ApplicationSettings.hpp  Renderer.hpp  Scene.hpp
src/Public/Xacor/: Application.hpp  Renderer.hpp
src/Public/Xacor/Input/: Keyboard.hpp
src/Public/Xacor/RHI/: Debug.hpp  Extents.hpp  Offsets.hpp  Texture.hpp
src/RHI/: Buffer.cpp  Debug.cpp  Framebuffer.cpp  Pipelines.cpp  Texture.cpp
(+11 files in other folders)
